--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
+    "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
