--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
