--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "googleapis": "^164.1.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
+    "mammoth": "^1.11.0",
     "next": "15.5.6",
+    "pdf-parse": "^2.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
