--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
+    "@types/jspdf": "^2.0.0",
     "dotenv": "^17.2.3",
     "googleapis": "^164.1.0",
-    "jspdf": "^3.0.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.546.0",
     "mammoth": "^1.11.0",
     "next": "15.5.6",
