--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noEmitOnError": false,
     "types": ["jest", "@types/node", "@testing-library/jest-dom"],
     "plugins": [
       {
