--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:coverage": "jest --coverage",
     "clean": "rimraf .next",
     "clean:dev": "npm run clean && npm run dev",
-    "type-check":"tsc --noEmit"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -26,7 +26,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.546.0",
     "mammoth": "^1.11.0",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "pdf-parse": "^2.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
